# Flow-picker-tool

./: .gitattributes  .gitignore  README.md  build.bat  flow_harvester.spec  pyproject.toml  setup.bat  start.bat
.github/workflows/: release-windows.yml
app/: __init__.py  __main__.py  cli.py  diagnostics.py  license.py  paths.py  state.py  tunnel.py
app/config/: __init__.py  loader.py
app/db/: __init__.py  connection.py  schema.py
app/reports/: __init__.py  daily.py
app/runner/: __init__.py  multi.py  single.py
app/scheduler/: __init__.py  claim.py  daemon.py  recovery.py  state.py
app/tasks/: __init__.py  importer.py  repository.py
app/utils/: errors.py  logging.py  paths.py
app/web/: __init__.py  bootstrap.py  dependencies.py  messages.py  server.py
app/worker/: __init__.py  flow_extension_port.py  flow_mock.py  flow_playwright.py  (+4 more)
config/: flow-selectors.yaml  settings.yaml
docs/: customer-install-windows.md  customer-manual.md  v1-fragility-regression-suite.md  v2-architecture-challenges.md  v2-architecture-design.md  使用手册.txt  安装说明.txt
extension/: README.md  manifest.json  package.json  tsconfig.json  vite.config.ts
input/: tasks.csv
scripts/: start-spike-chrome.sh
tests/: conftest.py  test_app_paths.py  test_auto_resume_and_revive.py  test_config_loader.py  test_csv_import.py  test_db_schema.py  test_errors.py  test_flow_playwright_local.py  test_frames_upload_routing.py  test_license.py  test_login_session.py  test_operation_mode.py  test_paths.py  test_profile_check.py  test_recovery.py  test_report.py  test_runner_flow_mode_merge.py  test_runner_multi.py  test_runner_single.py  test_scheduler_claim.py  test_scheduler_daemon.py  test_scheduler_state.py  test_task_repository.py  test_web_api.py  test_web_bulk_import.py  test_web_files.py  test_web_messages.py  test_web_pages.py  test_web_ws.py  test_worker_loop.py  test_workstation_repository.py
(+37 files in other folders)
