[project]
name = "flow-harvester"
version = "0.1.0"
description = "Flow video candidate generation harvester (MVP)"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "click>=8.1",
    "patchright>=1.59",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    # psutil is used to clean up orphan Chrome processes left over
    # from a previous patchright session when relaunching with the
    # same user-data-dir. Falls back to ps/wmic shell-out if missing,
    # but bundled in for reliable cross-platform behavior.
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27",
]
build = [
    "pyinstaller>=6.5",
]

[project.scripts]
flow-harvester = "app.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
